[project]
name = "networkify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.3",
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "flask-bcrypt>=1.0.1",
    "flask-jwt-extended>=4.7.1",
    "flask-socketio>=5.6.1",
    "flask-sqlalchemy>=3.1.1",
    "pandapower>=3.4.0",
    "redis>=7.4.0",
]
