[project]
name = "networkify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.3",
    "dotenv>=0.9.9",
    "eventlet>=0.41.0",
    "flask>=3.1.3",
    "flask-bcrypt>=1.0.1",
    "flask-cors>=6.0.2",
    "flask-jwt-extended>=4.7.1",
    "flask-socketio>=5.6.1",
    "flask-sqlalchemy>=3.1.1",
    "marshmallow>=4.3.0",
    "matplotlib>=3.10.9",
    "openpyxl>=3.1.5",
    "pandapower>=3.4.0",
    "pytest>=9.0.3",
    "redis>=7.4.0",
    "reportlab>=4.5.1",
]
